# nhse-tsas-solarch-demo-api

./: Makefile  README.md  api proxy details.txt  manifest_template.yml  package-lock.json  package.json  pyproject.toml
.github/workflows/: continuous-integration.yml
azure/: azure-pr-pipeline.yml  azure-release-pipeline.yml  project.yml
azure/templates/: run-tests-sandbox.yml  run-tests.yml
proxies/live/apiproxy/: proxy.xml
proxies/live/apiproxy/policies/: AssignMessage.AddDummyHeader.xml  AssignMessage.AddHeaders.xml  AssignMessage.AddIHEHeaders.xml  AssignMessage.AddIdentityToken.xml  AssignMessage.AddIntrospectionAccessTokenInfo.xml  AssignMessage.AddIntrospectionHeaders.xml  FlowCallout.GetEnvironmentKeyValueMapData.xml  Javascript.EnhancedAccessTokenInfo.xml  OAuthV2.GetAccessTokenInfo.xml  OAuthV2.VerifyAccessTokenAppAllLevels.xml  OAuthV2.VerifyAccessTokenAppAllLevelsOrUserP9.xml  OAuthV2.VerifyAccessTokenAppLevel3OrCis2Aal3.xml
proxies/live/apiproxy/proxies/: default.xml
proxies/live/apiproxy/targets/: target.xml  targetmhdspoc.xml  targetmhdspoctlsma.xml
proxies/sandbox/apiproxy/: proxy.xml
proxies/sandbox/apiproxy/policies/: AssignMessage.AddIHEHeaders.xml  AssignMessage.AddIntrospectionAccessTokenInfoDummy.xml  (+3 more)
sandbox/: app.js  app.spec.js  package-lock.json  package.json
specification/: nhse-tsas-solarch-demo-api.yaml
specification/components/examples/: DocumentReference.json
specification/components/schemas/: DocumentReference.yaml  ETag.yaml  XRequestID.yaml
tests/: test_endpoints.py
utils/: README.md
(+4 files in other folders)
