[project]
python = "^3.8"

[tool.poetry]
name = "nhse-tsas-solarch-demo-api"
version = "0.0.1-alpha"
description = "TODO"
authors = [
    #TODO add authors
]
readme = 'README.md'
license = "MIT"
repository = "https://github.com/NHSDigital/nhse-tsas-solarch-demo-api"
homepage = "https://github.com/NHSDigital/nhse-tsas-solarch-demo-api"
keywords = ["healthcare", "uk", "nhs"] #TODO add additional keywords


[tool.poetry.dependencies]
python = "^3.8"
pytest-nhsd-apim = "^3.4.1"

[tool.poetry.dev-dependencies]
flake8 = "^7.1.0"
black = "^24.4.2"
pip-licenses = "^4.4.0"
jinja2 = "^3.1.4"
pyyaml = "^6.0.1"
docopt = "^0.6.2"
jsonpath-rw = "^1.4.0"
semver = "^3.0.2"
gitpython = "^3.1.43"
pytest = "^8.2.2"
coverage = "^7.5.4"
aiohttp = "^3.9.5"
pytest-asyncio = "^0.23.7"

[tool.poetry.scripts]
